# Colony-Game

./: AppWindow.cpp  AppWindow.h  AppWindow_Internal.h  AppWindow_Loop.cpp  AppWindow_WndProc.cpp  CHATGPT_GENERAL_SEARCH_GUIDE.txt  CHATGPT_REPO_SEARCH_GUIDE.txt  CMakeLists.txt  CMakePresets.json  DxDevice.cpp  DxDevice.h  Launcher.cpp  MapGen.cpp  PATCH_NOTES.md  PrototypeGame.cpp  PrototypeGame.h  README.md  RUN_ME.bat  RUN_SILENT.vbs  Setup-Vcpkg.ps1  SingleClick.cpp  UserSettings.cpp  UserSettings.h  WinLauncher.cpp  bat  gh-browse.js  scripts\win\bootstrap.ps1  step2_include_worldgen_Noise.hpp.patch  step2_src_worldgen_stages_BaseElevation.cpp.patch  step2_src_worldgen_stages_Climate.cpp.patch  vcpkg-configuration.json  vcpkg.json
core/: Application.cpp  CMakeLists.txt  Log.cpp  Log.h  LogCompat.hpp  Window.hpp
core/src/: pch.hpp
demos/erosion/: CMakeLists.txt  ErosionCS.hlsl  ErosionDemo.cpp  README.md
engine/: CMakeLists.txt
engine/audio/: XAudio2Engine.cpp  XAudio2Engine.h
engine/win/: CrashHandler.cpp  CrashHandler.h  DpiAware.cpp  DpiAware.h
pathfinding/: CMakeLists.txt  JPS.hpp  JPS_Expander.hpp  JPS_GridAdapters.hpp  JPS_OctileHeuristic.hpp  Jps.cpp  JpsAdapter.cpp  JpsApiAdapter.cpp  JpsCore.hpp  JpsTimersWin.hpp  JpsTypes.hpp
pathfinding/jobs/: PathJobs.hpp
pathfinding/procgen/: Cellular.h  Noise.h  PoissonDisk.h  ProcGen.cpp  ProcGen.h  RoadCarver.h
pathfinding/src/: pch.hpp
platform/win/: AppConfig.cpp  AppConfig.h  AppInfo.h  AppPaths.cpp  AppPaths.h  Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  ColonyGame.manifest  CrashDump.cpp  CrashDump.h  CrashDumpGuard.cpp  CrashDumpGuard.h  CrashDumpStub.cpp  CrashDumpWin.cpp  CrashDumpWin.h  CrashHandler.cpp  CrashHandler.h  CrashHandler.hpp  CrashHandlerWin.cpp  CrashHandlerWin.h  DeviceResources.h  Dpi.cpp  Dpi.h  DpiAware.manifest  DpiMessagesWin.h  FilesystemWin.cpp  FilesystemWin.h  GamepadsXInput.cpp  HighPerfGPU.cpp  HighPerfGPU.hpp  Input.cpp  Input.h  InputRaw.cpp  InputRaw.h  InputWin.cpp  InputWin.h  LauncherCliWin.cpp  LauncherCliWin.h  LauncherEmbeddedSafeModeWin.cpp  (+67 more)
renderer/: CMakeLists.txt  ProfilingPix.h  ShaderCompiler.cpp  ShaderCompiler.hpp  Swapchain.cpp  Swapchain.h  SwapchainWin32.cpp  SwapchainWin32.h  TerrainRenderer.h  TerrainRenderer_Geometry.cpp  TerrainRenderer_Lod.cpp  TerrainRenderer_Materials.cpp  WorldRenderer.cpp  WorldRenderer.hpp
renderer/Debug/: PIXScopes.h
renderer/Shaders/: AtmosphereSky.hlsl  Batch2D_ps.hlsl  Batch2D_vs.hlsl  CMakeHlsl.cmake  CMakeLists.txt  CS_GenerateHeight.hlsl  CS_HeightToNormal.hlsl  CaveTriPlanarSplat.hlsl  DeferredDecalProjector.hlsl  PoissonDisk_cs.hlsl  TerrainGen.compute.hlsl  VolumetricClouds.hlsl  VoxelIso_MT.compute.hlsl  VoxelIso_MT_Materials.compute.hlsl  WaterGerstner.hlsl  erosion_thermal_apply_cs.hlsl  erosion_thermal_flow_cs.hlsl  mesh_ps.hlsl  mesh_vs.hlsl  shaders.json
renderer/src/: pch.hpp
src/: AppMain.cpp  AppWindow.cpp  AppWindow.h  AppWindow_Create.cpp  AppWindow_Impl.h  AppWindow_Loop.cpp  AppWindow_WndProc.cpp  AppWindow_WndProc_Input.cpp  AppWindow_WndProc_Window.cpp  CMakeLists.txt  ColonySimAI.hpp  Compat.h  CrashDump.cpp  CrashDump.h  D3DUtils.cpp  D3DUtils.h  DxDevice.cpp  DxDevice.h  GridMap.cpp  Launcher_SDL.cpp  PoissonDisk.cpp  PoissonDisk.h  SDLDetect.h  UserSettings.cpp  UserSettings.h  WinLauncher.cpp  WinUtil.h  build_info.h.in  colonygame.cpp  main.cpp  main_win.cpp  paths.cpp  paths.h  pch.h  pch.hpp  pch_core.hpp  pch_gui.hpp  shaders.cmake  src-gamesingletu.cpp
src/ai/: AStar.cpp  AStar.hpp  ColonySimAI.h  GoapPlanner.hpp  Heuristics.hpp  IndexedPriorityQueue.h  PathCache.hpp  PathTypes.hpp  Pathfinding.cpp  Pathfinding.h  Pathfinding.hpp  PathfindingAPI.hpp  TimeSlicedPathfinder.hpp  athfindingAPI.hpp  pathfinding.hpp
src/app/: App.cpp  App.h  CMakeLists.txt  ColonySlice.cpp  CommandLineArgs.cpp  CommandLineArgs.h  CrashHandler.h  EntryWinMain.cpp  FixedStepLoopExample.cpp  GpuHighPerfExports.cpp  WinMain.cpp
src/audio/: Audio.cpp  Audio.h  Soundscape.cpp  Soundscape.h  xaudio_engine.cpp  xaudio_engine.h
src/colony/: Manifest.cpp
src/colonygame/: colonygame_app_win32.inc  colonygame_cli.inc  colonygame_config.inc  colonygame_logging.inc  colonygame_main.inc  colonygame_platform_win.inc  colonygame_render_gdi.inc  colonygame_time_rng.inc  colonygame_util.inc  colonygame_world.inc
src/combat/: CGCombat.hpp  CGCombatDebugUI.cpp  CGCombatDebugUI.hpp  CGCombatEvents.hpp  CGCombatRng.hpp  CGCombatSimulation.cpp  CGCombatSimulation.hpp  CGCombatTypes.hpp  CGCombatWorld.cpp  CGCombatWorld.hpp  CGDamageModel.hpp  CGSpatialHash2D.hpp  CGStatusEffects.hpp  CGWeapon.hpp  CombatLite.hpp  README.md
src/common/: Compiler.h  ThreadPool.hpp  WinPlatform.h  macros.hpp  pch.hpp  pch_gui.hpp
src/core/: App.cpp  App.h  Application.cpp  Application.hpp  CMakeLists.txt  Config.cpp  Config.h  Crash.cpp  Crash.h  FixedStepLoop.cpp  FixedStepLoop.h  FixedTimestep.cpp  FixedTimestep.h  HiResClock.cpp  HiResClock.h  JobSystem.cpp  JobSystem.h  Log.cpp  Log.h  Paths.cpp  Paths.h  Profile.h  Random.h  Rng.h
src/crash/: CrashDumpWin.cpp  CrashDumpWin.h
src/debug/: DebugKeys.h
tests/: CMakeLists.txt  blueprint_tests.cpp  build_job_field_tests.cpp  colony_smoke.vcxproj  colony_smoke.vcxproj.filters  doctest.h  doctest_include.h  ecs_movement_tests.cpp  food_and_harvest_field_tests.cpp  haul_field_tests.cpp  input_binding_parse_tests.cpp  main.cpp  notification_log_tests.cpp  pathfinding_tests.cpp  plan_cost_tests.cpp  room_stats_tests.cpp  smoke.cpp  smoke_game_init.cpp  test_arena_pool.cpp  test_astar.cpp  test_atomic_write.cpp  test_command_line_args.cpp  test_core_config.cpp  test_input_binding_parse_numpad.cpp  test_input_binding_parse_vk_hex.cpp  test_input_bindings_parser.cpp  test_input_mapper_generic_modifiers.cpp  test_integration.cpp  test_io_atomic_file.cpp  test_jps.cpp  test_main.cpp  test_math_and_noise.cpp  test_nav.cpp  test_paths.cpp  test_plan_history.cpp  test_proto_world_save_format.cpp  test_save_schema.cpp  test_smoke.cpp  test_text_encoding.cpp  test_winpath_read_with_retry.cpp  (+2 more)
(+870 files in other folders)
